[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-sum-mcp"
version = "1.0.0"
description = "Video content analysis tool with MCP server integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Video-Sum MCP Team"}
]
keywords = ["video", "analysis", "mcp", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jieba>=0.42.1",
    "aiohttp>=3.9.0",
    "colorama>=0.4.6",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/video-sum-mcp/video-sum-mcp"
"Bug Reports" = "https://github.com/video-sum-mcp/video-sum-mcp/issues"
"Source" = "https://github.com/video-sum-mcp/video-sum-mcp"

[project.scripts]
video-sum-batch = "tools.batch_processor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto" 